xmobar/bar01.errors

bar01.hs:90:46: warning: [-Wtabs]
    Tab character found here, and in two further locations.
    Please use spaces instead.
   |
90 |                                        , "-o"   , "<left>% (<timeleft>)"
   |                                              ^^^

bar01.hs:106:11: error: parse error on input ‘Run’
    |
106 |         , Run StdinReader
    |           ^^^
